--- a/README
+++ b/README
@@ -1,3 +1,9 @@
-1.
-2.
-3.
+1. mkdir ~/bin
+
+2. mv commit_animation ~/bin
+
+3. chmod u+x ~/bin/commit_animation
+
+4. mv pre-commit .git/hooks/
+
+5. chmod u+x .git/hooks/pre-commit
